--- a/templates/views/message.hbs
+++ b/templates/views/message.hbs
@@ -7,15 +7,76 @@
 </head>
 
 <body>
-    <div class="header">
-        <p>Welcome {{username}}</p>
-        <a id="logout" href="/logout">logout</a>
+    <div class="sky">
+        <div class="moon"></div>
     </div>
-    <div class="messages">
-        <b>You have <u>one</u> unread message:</b><br>
-        {{message}}
+
+    <div class="skyline"></div>
+    <div class="light">
+        <!--
+	Batman logo by Stephen Greig:
+	http://tangledindesign.com/famous-logos-in-css3-the-dark-knight/
+-->
+        <div id="batman-logo">
+            <div id="left-white"></div>
+            <div id="right-white"></div>
+            <div id="top-white"></div>
+        </div>
+
     </div>
-    {{>footers}}
+
+    <div class="message-box">
+        <div class="header">
+            <div class="header-content">
+                Welcome {{username}}
+            </div>
+            <a id="logout" href="/logout" class="logout">logout</a>
+        </div>
+        <hr />
+        <div class="text" style="line-height: 20pt;">{{message}}</div>
+    </div>
+
+
+
+    <div class="skyline"></div>
+
+    <div class="batman">
+        <div class="head">
+            <div class="ears">
+                <span></span>
+                <span></span>
+            </div>
+            <div class="nose"></div>
+            <div class="mouth"></div>
+        </div>
+        <div class="body">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="leg">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="leg">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="foot"></div>
+        <div class="foot"></div>
+        <div class="cape">
+            <div class="cape-shape"></div>
+        </div>
+        <div class="watchtower">
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+
 </body>
 
 </html>
